refactor(Mensagens de erro): adicionar mensagens personalizadas.

--- a/src/modulo-05-java/lavanderia/src/main/resources/messages_pt_BR.properties
+++ b/src/modulo-05-java/lavanderia/src/main/resources/messages_pt_BR.properties
@@ -1,1 +1,3 @@
 Length.cliente.nome = Nome ultrapassou {1} caracteres
+typeMismatch.produto.valor Valor incorreto
+typeMismatch.produto.prazo = Prazo incorreto
